--- a/Home/home.html
+++ b/Home/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,52 @@
     <link rel="stylesheet" href="./home.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
-<body>
 
-    
-    
+<body>
+    <header>
+        <div class="conatiner">
+            <nav>
+                <h1 class="first_name">{Finsweet</h1>
+                <ul id="list">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Company</a></li>
+                    <li><a href="#">Career</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#">Clone project <i class='bx bx-right-arrow-alt'></i></a></li>
+                </ul>
+                <i class='bx bx-menu' id="menu"></i>
+            </nav>
+            <section id="wrapper">
+                <div class="divded1">
+                    <h1>Transform Your Idea Into Reality with Finsweet</h1>
+                    <p>The entire Finsweet team knows what's good with Webflow and you can too with 1 week and a good
+                        attitude.</p>
+                    <button class="button">
+                        <div class="rectangle"></div>Request Quote<i class='bx bx-right-arrow-alt'></i>
+                    </button>
+                </div>
+                <div class="divded2"></div>
+            </section>
+            <div class="center">
+                <div class="divide_by_six0">
+                    <h4>Our Clients</h4>
+                    <h3>We've Worked with</h3>
+                </div>
+                <div class="divide_by_six1"><img src="./img//Vector (2).png">logoipsum"</div>
+                <div class="divide_by_six1"><i class='bx bxs-vector'></i>logoipsum"</div>
+                <div class="divide_by_six1"><img src="./img/Vector (1).png">logoipsum</div>
+                <div class="divide_by_six1"><img src="./img/Vector (3).png">logoipsum</div>
+                <div class="divide_by_six1"><img src="./img//Vector (4).png">logoipsum</div>
+            </div>
+        </div>
+    </header>
+    <script src="./home.js"></script>
 </body>
+
 </html>
