I have completed the ABOUT US, Our expertise, and Our Services sections of the home page. Responsive ready too

--- a/Home/home.html
+++ b/Home/home.html
@@ -53,6 +53,211 @@
             </div>
         </div>
     </header>
+
+    <!-- Start About Section -->
+    <section class="About_section" style="background-color: #fff; padding: 50px 0;">
+        <!-- Start About Container -->
+        <div class="conatiner">
+            <p class="About_para">ABOUT US</p>
+            <div class="heading_row">
+                <h2>The company leads entire webdesign process from concept to delivery.</h2>
+                <div class="heading_col">
+                    <h3>The Era Of Technology.</h3>
+                    <p>
+                        Through True Rich Attended does no end it his mother since real had half every him case in
+                        packages enquire we up ecstatic unsatiable saw his giving Remain expense you position concluded.
+                    </p>
+                </div>
+            </div>
+
+            <!-- A series of pictures -->
+            <div class="pictures">
+                <div class="img_box">
+                    <img src="./img/about-img/Image 1.png" width="100%">
+                </div>
+                <div class="img_box">
+                    <img src="./img/about-img/Image 2.png" width="100%">
+                </div>
+                <div class="img_box">
+                    <img src="./img/about-img/Image 3.png" width="100%">
+                </div>
+                <div class="decoration">
+                    <span style="--i: #FFA155;"></span>
+                    <span style="--i: #FFD3AF;"></span>
+                </div>
+            </div>
+            <!-- Numbers -->
+            <div class="Numbers">
+                <div class="number_box">
+                    <div class="number">
+                        <h3 class="rank">1560+</h3>
+                        <img src="./img/about-img/Shapes.jpg">
+                        <p>Project Delivered</p>
+                    </div>
+                    <div class="number">
+                        <h3 class="rank">100+</h3>
+                        <img src="./img/about-img/Shapes.jpg">
+                        <p>Project Delivered</p>
+                    </div>
+                    <div class="number">
+                        <h3 class="rank">950+</h3>
+                        <img src="./img/about-img/Shapes.jpg">
+                        <p>Project Delivered</p>
+                    </div>
+                    <div class="number">
+                        <h3 class="rank">10 yrs</h3>
+                        <img src="./img/about-img/Shapes.jpg">
+                        <p>Project Delivered</p>
+                    </div>
+                </div>
+                <div class="Text_link">
+                    <a href="#">Read about us</a>
+                    <img src="./img/about-img/Icon.png">
+                </div>
+            </div>
+        </div>
+        <!-- End About Container -->
+    </section>
+    <!-- End About Section -->
+
+    <!-- ================================================================================== -->
+
+    <!-- Start Our expertise Section -->
+    <section class="Our_expertise" style="background-color: #ECF8F9; padding: 50px 0;">
+        <!-- Start Our expertise container -->
+        <div class="conatiner">
+            <p class="Our_expertise_para">Our expertise</p>
+            <div class="Our_expertise_row">
+                <div class="expertise_text">
+                    <h2>
+                        We want to get local identification in every corner of the world in this era of global
+                        citizenship
+                    </h2>
+                    <p>
+                        Through True Rich Attended does no end it his mother since real had half every him case in
+                        packages
+                        enquire we up ecstatic unsatiable saw his giving Remain expense you position concluded.
+                    </p>
+                </div>
+                <div class="expertise_col">
+                    <div class="decoration_cub"></div>
+                    <div class="expertise_box">
+                        <div class="expertise_box_element">
+                            <div class="profile_img">
+                                <img src="./img/Our_expertise/shuttle.png">
+                            </div>
+                            <div class="profile_text" style="width: 303px; height: 76px;">
+                                <h6>On Time Delivery</h6>
+                                <p style="width: 303px;">
+                                    Through True Rich Attended does no end it his mother since real had half every him.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="expertise_box">
+                        <div class="expertise_box_element">
+                            <div class="profile_img">
+                                <img src="./img/Our_expertise/settings.png">
+                            </div>
+                            <div class="profile_text" style="width: 303px; height: 76px;">
+                                <h6>Best Quality</h6>
+                                <p style="width: 303px;">
+                                    Through True Rich Attended does no end it his mother since real had half every him.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="expertise_box">
+                        <div class="expertise_box_element">
+                            <div class="profile_img">
+                                <img src="./img/Our_expertise/support.png">
+                            </div>
+                            <div class="profile_text" style="width: 303px; height: 76px;">
+                                <h6>Support Assist</h6>
+                                <p style="width: 303px;">
+                                    Through True Rich Attended does no end it his mother since real had half every him.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="decoration_bottom">
+                        <span style="--e: #FFA155;"></span>
+                        <span style="--e: #444CFC;"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Our expertise container -->
+    </section>
+    <!-- End Our expertise Section -->
+
+    <!-- Start Our Services Section -->
+    <section class="Our_Services" style="background-color: #FFE6D2; padding: 50px 0;">
+        <!-- Start Our Services Container -->
+        <div class="conatiner">
+            <p class="Our_Services_para">Our Services</p>
+            <div class="Our_Services_col" style="margin-bottom: 56px;">
+                <h2 style="width: 777px;">We build software solutions that solve client's business challenges</h2>
+                <button class="button button2">
+                    <img src="./img/Our-Services/Shapes.png" class="decoration_img">
+                    Start a Project
+                    <img src="./img/Our-Services/Icon.png">
+                </button>
+            </div>
+
+            <!-- Start Our Services Row -->
+            <div class="Our_Services_Row">
+                <!-- Our_Services_box 1 -->
+                <div class="Our_Services_box">
+                    <div class="Our_Services_profile">
+                        <img src="./img/Our-Services/headphones.png">
+                    </div>
+                    <h6>Technical support</h6>
+                    <p>
+                        We aim to attain the greatest satisfaction for our clients and be one of the prominent names
+                        when it comes to world-class service
+                    </p>
+                    <div class="Text_link">
+                        <a href="#">Read more</a>
+                        <img src="./img/about-img/Icon.png">
+                    </div>
+                </div>
+                <!-- Our_Services_box 2 -->
+                <div class="Our_Services_box">
+                    <div class="Our_Services_profile">
+                        <img src="./img/Our-Services/Setting.png">
+                    </div>
+                    <h6>Testing Management</h6>
+                    <p>
+                        We aim to attain the greatest satisfaction for our clients and be one of the prominent names
+                        when it comes to world-class service
+                    </p>
+                    <div class="Text_link">
+                        <a href="#">Read more</a>
+                        <img src="./img/about-img/Icon.png">
+                    </div>
+                </div>
+                <!-- Our_Services_box 3 -->
+                <div class="Our_Services_box">
+                    <div class="Our_Services_profile">
+                        <img src="./img/Our-Services/web-development.png">
+                    </div>
+                    <h6>Development</h6>
+                    <p>
+                        We aim to attain the greatest satisfaction for our clients and be one of the prominent names
+                        when it comes to world-class service
+                    </p>
+                    <div class="Text_link">
+                        <a href="#">Read more</a>
+                        <img src="./img/about-img/Icon.png">
+                    </div>
+                </div>
+            </div>
+            <!-- End Our Services Row -->
+        </div>
+        <!-- End Our Services Container -->
+    </section>
+    <!-- End Our Services Section -->
     <script src="./home.js"></script>
 </body>
 
